Edit form for answers added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,64 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Quiz</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Quiz</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
 
-  <body>
-    <section class="section">
-      <div class="container">
-<nav class="navbar is-warning px-2" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="/">
-      <%= image_tag "programming.png" %>
-    </a>
+<body>
+<section class="section">
+  <div class="container">
+    <nav class="navbar is-warning px-2" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          <%= image_tag "programming.png" %>
+        </a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <%= link_to 'Home', root_path, class: 'navbar-item' %>
-      <%= link_to 'Courses', courses_path, class: 'navbar-item' %>
-      <%= link_to 'Questions', questions_path, class: 'navbar-item' %>
-      <%= link_to 'Answers', answers_path, class: 'navbar-item' %>
-      <%= link_to 'New Question', new_question_path, class: 'navbar-item' %>
-      <%= link_to 'Quiz', quiz_path, class: 'navbar-item' %>  
-    </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <%= link_to 'Home', root_path, class: 'navbar-item' %>
+          <%= link_to 'Courses', courses_path, class: 'navbar-item' %>
+          <%= link_to 'Questions', questions_path, class: 'navbar-item' %>
+          <%= link_to 'Answers', answers_path, class: 'navbar-item' %>
+          <%= link_to 'New Question', new_question_path, class: 'navbar-item' %>
+          <%= link_to 'Quiz', quiz_path, class: 'navbar-item' %>
+        </div>
 
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-primary">
+                <strong>Sign up</strong>
+              </a>
+              <a class="button is-light">
+                Log in
+              </a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </nav>
   </div>
-</nav>
-</div>
 </section>
 <div class="container my-5">
-<section>
-
-        <%= yield %>
-
-  <%= link_to 'New Question', new_question_path, class: 'button is-danger mt-5' %>
-      </div>
-    </section>
-  </body>
+  <section>
+    <%= yield %>
+    <div><%= link_to 'New Question', new_question_path, class: 'button is-danger mt-5' %></div>
+  </section>
+</div>
+</body>
 </html>
