styling with Bulma

--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Edit answer</h1>
+<h1 class="is-size-3 mb-5">Edit answer</h1>
 
 <%= form_with(model: @answer) do |form| %>
   <% if @answer.errors.any? %>
