--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,4 @@
-<h1 class="title">Question show </h1>
-
+<h1 class="is-size-3 mb-5">Question show </h1>
 
   <span class="bd-snippet-tag bd-is-example">
     <%= @question.course.title %>
