--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Quiz</h1>
+<h1 class="is-size-3 mb-5">Quiz</h1>
   <div data-controller="quiz">
     <% @questions.each do |question| %>
         <div data-quiz-target="slide">
