--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,4 +1,16 @@
-<h1 class="title">Answer show </h1>
-<h2 class="title"><%= @answer.question.content %></h2>
-<p><%= @answer.content %></p>
-<%= link_to 'Edit', edit_answer_path, class: 'button is-primary' %>
+<h1 class="is-size-2 mb-5">Answer show</h1>
+
+  <span class="bd-snippet-tag bd-is-example mb-2">
+    Question
+  </span>
+  <p  class="is-size-4 mb-5">
+    <%= @answer.question.content %>
+  </p>
+  <span class="bd-snippet-tag bd-is-example mb-2">
+      Answer
+  </span>
+  <p  class="is-size-4 mb-5">
+    <%= @answer.content %>
+  </p>
+
+  <%= link_to 'Edit', edit_answer_path, class: 'button is-primary' %>
