--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Questions index</h1>
+<h1 class="is-size-3 mb-5">Questions index</h1>
 <p>Number of questions: <%= @questions.count %></p>
 
 <% @questions.each do |question| %>
