--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,9 +1,10 @@
-<h1>Quiz#new</h1>
-<h1 class="title">Study page</h1>
+<h1 class="is-size-3 mb-5">Quiz new</h1>
 
 <%= form_tag quiz_path, data: { turbo: false } do  %>
-<div><%= collection_select(:course, :course_id, Course.all, :id, :title, {include_hidden: false}, {multiple: true, required: true}) %>
-</div>
+
+  <div class="select is-multiple">
+    <%= collection_select(:course, :course_id, Course.all, :id, :title, {include_hidden: false}, {multiple: true, required: true, class: 'multiple'}) %>
+  </div>
 <!-- 
   <input type="checkbox" name="levels[]" value="0"/> Level 0<br/>
   <input type="checkbox" name="levels[]" value="1"/> Level 1<br/>
@@ -14,6 +15,7 @@
 
 <h5 class="is-size-4 my-5">Additional options</h5>
 <p>How many questions?</p>
+  <div class="select is-info">
     <select name="questions">
       <option value="5" selected="selected">5</option>
       <option value="10">10</option>
@@ -21,14 +23,15 @@
       <option value="20">20</option>
       <option value="25">25</option>
     </select>
+  </div>
   
 <div class="mt-5">
+  <label class="checkbox">
   <%= check_box_tag 'random', 'true', true %>
    Random?
+  </label>
    </div>
-        <div class="introduction">
-          You need to mark somethig. Try again...
-        </div>
+
   <%= submit_tag "Start", class: 'button is-link my-5' %>
 <% end %>
 
